fix advanced search controls alignment

--- a/ui/site/css/_search.scss
+++ b/ui/site/css/_search.scss
@@ -49,6 +49,9 @@
       width: 88%;
     }
 
+    .half input[type="date"] {
+      width: 78%;
+    }
     
     input.submit {
       width: 99%;
